# snape

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.json  pyproject.toml  run.py  setup.sh
autocomplete/: snape-complete.bash
init/: snape.bash  snape.fish  snape.ksh  snape.zsh
py/: snape.py
sh/: snape.bash  snape.fish  snape.ksh  snape.zsh
snape/: __init__.py  annotations.py  config.py  env_var.py  run.py
snape/cli/: __init__.py  _parser.py  main.py  parser.py
snape/cli/commands/: __init__.py  attach.py  clean.py  delete.py  detach.py  env.py  help.py  new.py  possess.py  setup.py  status.py
snape/util/: __init__.py  io.py  path.py
snape/virtualenv/: __init__.py  internal.py  util.py
src/: snape.bash  snape.fish  snape.py
src/snape/: __init__.py  __main__.py  config.py  env_var.py
src/snape/cli/: _parser.py  main.py
src/snape/cli/commands/: __init__.py  attach.py  clean.py  delete.py  detach.py  env.py  execute.py  freeze.py  help.py  new.py  setup.py  status.py  upgrade.py
src/snape/config/: illegal-env-names.json  shells.json
src/snape/util/: io.py  path.py
src/snape/virtualenv/: __init__.py  internal.py  util.py
test/: requirements.txt  setup.sh  tests.txt
test/snape_test/: __init__.py  util.py
test/snape_test/cli/: help.py
