[metadata]
packages = [ "snape" ]

[project]
name = "snape"
version = "1.0"
description = "python-venv wrapper for linux"
readme = "README.md"
license-files = [ "LICENSE" ]

authors = [
    {"name" = "Leon Thelen", "email" = "leon.thelen@gmx.de"}
]

requires-python = ">=3.7"

[project.urls]
GitHub = "https://github.com/KirbyNel0/snape"

[tool.setuptools.packages.find]
where = [ "src" ]
